name:                thunder-raid
version:             0.0.0
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable thunder-raid
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Model, 
                       Board
		       
  default-language:    Haskell2010
  ghc-options:       -W -threaded
