name:                thunder-raid
version:             0.0.0
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable thunder-raid
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Model, 
                       Board
		       
  default-language:    Haskell2010
  ghc-options:       -W -threaded

Library
  ghc-options:        -W
  exposed-modules:    Board,
                      Control
  Default-Extensions: OverloadedStrings

  -- other-extensions:
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base >=4.9, 
                    random >=1.1 && <1.2,
                    vty, 
                    brick, 
                    containers, 
                    mtl,
                    filepath,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    thunder-raid
  other-modules:    Common